added online users' count

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 <body>
   <div class="chat-container">
     <div class="chat-header">
-      Chat App
+      <div class="title">Chat App</div>
+      <div class="online-status">Online: <span class="user-count">0</span></div>
     </div>
     <div class="chat-messages" id="messages">
         <div class="message client">Hello there!</div>
